src/pages/HomePage.module.css
.main {
    margin: 0;
    display: flex;
    flex-direction: column;
    width: 100%;
    padding: 3rem 2rem;
    max-width: 1280px;
    margin: 0 auto;
    text-align: center;
}

.search_container {
  position: relative;
  display: inline-block;
}

.search_icon {
  position: absolute;
  left: 20px;
  top: 50%;
  transform: translateY(-50%);
  color: var(--text-color);
  opacity: 0.7;
}

.filter_panel {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 100%;
    margin-bottom: 2rem;
}

.input {
    outline: none;
    color: var(--text-color);
    background-color: var(--secondary-background-color);
    background-size: 24px;
    padding-inline-start: 52px;
    padding-inline-end: 10px;
    padding-block: 0;
    width: 480px;
    height: 56px;
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
    border: 1px solid transparent;
    border-radius: 4px;
    font-family: 'Nunito Sans', sans-serif;
    font-weight: 300;
    font-size: 0.875rem; /* 14px */
}

.select:focus-visible {
  outline: 2px solid var(--focus-color);
  outline-offset: 2px;
  box-shadow: 0 0 0 2px var(--background-color);
}

.select {
    color: var(--text-color);
    outline: none;
    background-color: var(--secondary-background-color);
    padding-inline-start: 1.8rem;
    padding-inline-end: 0.8rem;
    padding-block: 0;
    width: 200px;
    max-width: 200px;
    height: 56px;
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
    border: 1px solid transparent;
    border-radius: 4px;
    appearance: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    background-repeat: no-repeat;
    background-position: right 10px center;
    background-size: 24px;
    font-size: 0.875rem; /* 14px */
    cursor: pointer;
    padding-right: 30px;
    font-family: 'Nunito Sans', sans-serif;
    font-weight: 300;
}

@media (max-width: 768px) {
    .main {
        padding: 1rem;
    }
    .filter_panel {
        display: flex;
        flex-direction: column;
        gap:1rem;
        justify-content: space-between;
        width: 100%;
        margin-bottom: 2rem;
    }

    .search_container, .select {
        width: 100%;
    }

    .input {
        width: 200px;
    }
    .input, .select {
        max-width: none;
    }
}

.select_container {
    position: relative;
    display: inline-block;
}

.chevron_icon {
    position: absolute;
    right: 10px;
    top: 50%;
    transform: translateY(-50%);
    pointer-events: none;
}

.countryItem {
    font-size: 0.875rem; /* 14px */
}

